Fixed display on Iphone 12/13

--- a/style-media.css
+++ b/style-media.css
@@ -98,7 +98,11 @@
     display: none;
   }
   .navbar.active {
-    display: block;
+      width: 50%;
+      right: 0;
+      padding: 0 5% 2rem 5%;
+      align-items: flex-end;
+      display: block;
   }
   .navbar a {
     display: block;
@@ -167,12 +171,6 @@
     flex-shrink: 0;
     min-width: 20%;
     max-width: 100%;
-  }
-  .navbar.active {
-    width: 50%;
-    right: 0;
-    padding: 6rem 5% 2rem;
-    align-items: flex-end;
   }
   #education{
     padding: 1rem 12%;
@@ -317,7 +315,7 @@
     margin-bottom: 10rem;
   }
   .home-content {
-    margin: 0;
+    margin: 5rem 0;
   }
   .home h1 {
     margin: 0;
